--- a/templates/index.html
+++ b/templates/index.html
@@ -1,94 +1,46 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Smart Harvest</title>
-    <link href="../static/style.css" ref="stylesheet">
-</head>
-<body>
-<div>
-    <h1>Smart Harvest Xpert</h1>
-    <a href="./about">About Project</a>
-</div> 
-<div class="container">   
-        
-        <div class="price">
-            <div>
-                <h3>Predict the market trend of the crops</h3>
+{% extends "base.html" %}
+
+{% block content %}   
+
+<div class="container py-5">
+  <div class="row justify-content-center">
+    <div class="col-md-8">
+      <div class="card shadow-sm border-0">
+        <div class="card-header ">
+          <h4 class="mb-0 text-outline-primary">Tomato Price Prediction</h4>
+        </div>
+        <div class="card-body">
+          <form method="post" action="/predict">
+            <div class="mb-3">
+              <label for="seeding_date" class="form-label">Start Date</label>
+              <input type="date" class="form-control" id="start_date" name="start_date" required>
             </div>
-            <div>
-                <label for="plantationDate">Plantation Date</label>
-                <input type="date" id="plantationDate" name="plantationDate">
+
+            <div class="mb-3">
+              <label for="harvesting_date" class="form-label">End Date</label>
+              <input type="date" class="form-control" id="End_date" name="End_date" required>
             </div>
-            <div>
-                <label for="crop">Crop</label>
-                <select id="crop" name="crop">
-                    <option value="SELECT">SELECT</option>
-                    <option value="tomato">Tomato</option>
-                    <option value="onion">Onion</option>
-                    <option value="Potato">Potato</option>
+
+            <div class="mb-3">
+                <label for="crop_id" class="form-label">Crop Type</label>
+                <select class="form-control" id="crop_id" name="crop_id" required>
+                    <option value="">Select a crop</option>
+                    <option value="1">Tomato Common </option>
+                    <option value="2">Tomato Desi</option>
+                    <option value="3">Tomato B1</option>
                 </select>
             </div>
-    
-            <div>
-            <button class="btn" id="predict" onclick="">Predict</button>
-            
-            </div>
-            <div>
-                <table>
-                    <thead>
-                        <tr>
-                            <th>Date</th>
-                            <th>Crop</th>
-                            <th>Crop_Type</th>
-                            <th>Model</th>
-                            <th>Price/Kg</th>
-                        </tr>
-                    </thead>
-                    <tbody id="table-price">
-                    
-                    </tbody>
-                </table>
-            </div>
+
+            <button type="submit" class="btn btn-primary w-100"> Predict Prices</button>
+          </form>
         </div>
-        <div class="iot">
-            <div>
-                <div>
-                    <h3>Real-Time Data for IOT devices</h3>
-                </div>
-                <div>
-                    <label for="harvestDate">Harvest Date</label>
-                    <input type="date" id="harvestDate" name="harvestDate">
-                </div>
-                <div>
-                <button class="btn" id="getdata">Get Data</button>
-                </div>
-                
-                <div>
-                    <button class="btn" onclick="window.location.href='/live'">Real Time IOT</button>
-                    </div>
-            </div>
-            <div>
-                <table>
-                    <thead>
-                        <tr>
-                            <th>Date</th>
-                            <th>Time</th>
-                            <th>Temperature</th>
-                            <th>Humidity</th>
-                            <th>CO2</th>
-                        </tr>
-                    </thead>
-                    <tbody id="table-iot">
-                    
-                    </tbody>
-                </table>
-            </div>
-        </div>
+      </div>
+    </div>
+  </div>
 </div>
-    
-    
-    <script src="../static/main.js"> </script>
-</body>
-</html>
+
+
+
+{% endblock %}
+
+ 
