--- a/templates/index.html
+++ b/templates/index.html
@@ -11,12 +11,12 @@
         </div>
         <div class="card-body">
           <form method="post" action="/predict">
-            <div class="mb-3">
+            <div class="mb-3 w-50">
               <label for="seeding_date" class="form-label">Start Date</label>
               <input type="date" class="form-control" id="start_date" name="start_date" required>
             </div>
 
-            <div class="mb-3">
+            <div class="mb-3 w-50">
               <label for="harvesting_date" class="form-label">End Date</label>
               <input type="date" class="form-control" id="End_date" name="End_date" required>
             </div>
@@ -31,7 +31,7 @@
                 </select>
             </div>
 
-            <button type="submit" class="btn btn-primary w-100"> Predict Prices</button>
+            <button type="submit" class="btn btn-primary w-30"> Predict Prices</button>
           </form>
         </div>
       </div>
