--- a/templates/live.html
+++ b/templates/live.html
@@ -30,7 +30,7 @@
       </div>
     </div>
 
-    <button class="btn  btn-primary" onclick="updateData()">Update Real-Time Data</button>
+    <button class="btn w-60 btn-primary" onclick="updateData()">Update Real-Time Data</button>
   </div>
 </div>
 {% endblock %}
