--- a/templates/base.html
+++ b/templates/base.html
@@ -6,6 +6,7 @@
   <title>Smart Harvest</title>
   <link href="../static/style.css" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"/>
+  <link rel="stylesheet" href="https://cdn.datatables.net/1.13.4/css/dataTables.bootstrap5.min.css">
 </head>
 <body style="background-color: rgb(238, 238, 238);">
     <nav class="navbar navbar-expand-lg modern-navbar">
@@ -45,8 +46,10 @@
     {% block content %}
         Default content
     {% endblock %}
-
+    <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
     <script src="../static/main.js"></script>
+    <script src="https://cdn.datatables.net/1.13.4/js/jquery.dataTables.min.js"></script>
+    <script src="https://cdn.datatables.net/1.13.4/js/dataTables.bootstrap5.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
