--- a/templates/base.html
+++ b/templates/base.html
@@ -12,7 +12,7 @@
     <nav class="navbar navbar-expand-lg modern-navbar">
       <div class="container">
         <!-- Brand -->
-        <a class="navbar-brand d-flex align-items-center fw-bold text-light" href="#">
+        <a class="navbar-brand d-flex align-items-center fw-bold text-light" href="./">
           <img src="../static/leaf.png" alt="Logo" width="40" height="40" class="me-2">
           Smart Harvest
         </a>
