--- a/templates/index.html
+++ b/templates/index.html
@@ -71,25 +71,20 @@
   </div>
 </div>
 {% if predictions %}
-  <h3 class="mt-4">Prediction Results</h3>
-  <table class="table table-bordered">
-    <thead>
-      <tr>
-        <th>Date</th>
-        <th>Predicted Price</th>
-      </tr>
-    </thead>
-    <tbody>
-      {% for pred in predictions %}
-        <tr>
-          <td>{{ pred.Date }}</td>
-          <td>{{ pred.Predicted_Price }}</td>
-        </tr>
-      {% endfor %}
-    </tbody>
-  </table>
+    <div class="row justify-content-center mt-3">
+    <div class="col-md-10">
+      <div class="card shadow-sm border-0">
+        <div class="card-body">
+          <h3 class="mt-3">Prediction Results</h3>
+            <div class="table-responsive">
+              {{ pred |safe }}
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    </div>
 {% endif %}
-
 {% endblock %}
 
  
