--- a/templates/base.html
+++ b/templates/base.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-bs-theme="{{ theme|default('dark') }}">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Smart Harvest</title>
-  <link href="../static/style.css" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"/>
   <link rel="stylesheet" href="https://cdn.datatables.net/1.13.4/css/dataTables.bootstrap5.min.css">
 </head>
-<body style="background-color: rgb(238, 238, 238);">
-    <nav class="navbar navbar-expand-lg modern-navbar">
+<body>
+    <nav class="navbar navbar-expand-lg modern-navbar" id="navigation">
       <div class="container">
         <!-- Brand -->
         <a class="navbar-brand d-flex align-items-center fw-bold text-light" href="./">
@@ -39,6 +38,7 @@
               <a class="nav-link text-light fw-semibold" href="./live">Live Demo</a>
             </li>
           </ul>
+           <button id="theme-toggle" class="btn ms-3" type="button" aria-label="Toggle theme">🌙</button>
         </div>
       </div>
     </nav>
